[package]
name = "gruphst"
version = "0.11.1"
edition = "2021"
description = "An in-memory graph database"
license = "MIT"
documentation = "https://docs.rs/gruphst"
readme = "README.md"
repository = "https://github.com/carvilsi/gruphst"
homepage = "https://github.com/carvilsi/gruphst"
keywords = ["graph-database", "in-memory-database", "persistence"]
categories = ["database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
uuid = { version = "1.9.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
log = "0.4.21"
simple_logger = "5.0.0"
dotenv = "0.15.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gruphst_memory_watcher"
harness = false
