[package]
name = "gruphst"
version = "0.16.3"
edition = "2021"
description = "An in-memory graph database"
license = "MIT"
documentation = "https://docs.rs/gruphst"
readme = "README.md"
repository = "https://github.com/carvilsi/gruphst"
homepage = "https://github.com/carvilsi/gruphst"
keywords = ["graph-database", "in-memory-database", "persistence"]
categories = ["database"]

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive", "rc"] }
uuid = { version = "1.16.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
log = "0.4.27"
simple_logger = "5.0.0"
dotenvy = "0.15.7"
argon2 = { version = "0.5.3", features = ["std"] }
thiserror = "1.0.69"
csv = "1.3.1"
rand = "0.9.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "gruphst_memory_watcher"
harness = false

[[bench]]
name = "gruphst_import_from_csv"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
